tmux bar colour update & meta shortcuts

--- a/tmux.conf
+++ b/tmux.conf
@@ -85,15 +85,15 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
-bind -n M-& select-window -t 1
-bind -n M-[ select-window -t 2
-bind -n M-{ select-window -t 3
-bind -n M-} select-window -t 4
-bind -n M-( select-window -t 5
-bind -n M-= select-window -t 6
-bind -n M-* select-window -t 7
-bind -n M-) select-window -t 8
-bind -n M-+ select-window -t 9
+bind -n M-g select-window -t 1
+bind -n M-h select-window -t 2
+bind -n M-c select-window -t 3
+bind -n M-t select-window -t 4
+bind -n M-r select-window -t 5
+bind -n M-n select-window -t 6
+bind -n M-m select-window -t 7
+bind -n M-w select-window -t 8
+bind -n M-v select-window -t 9
 
 # <prefix> Escape to clear the screen
 bind Escape send-keys 'C-l'
@@ -116,5 +116,5 @@ setw -g automatic-rename on
 # set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
 set -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
 
-# Solarized 256
+# https://github.com/seebi/tmux-colors-solarized
 if-shell "[ -f ~/.tmuxcolors-256.conf ]" 'source ~/.tmuxcolors-256.conf'
