--- a/tmuxcolors-light.conf
+++ b/tmuxcolors-light.conf
@@ -29,3 +29,6 @@ set-option -g display-panes-colour brightred #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=white,bg=red #base2, red
