--- a/tmuxcolors-dark.conf
+++ b/tmuxcolors-dark.conf
@@ -29,3 +29,6 @@ set-option -g display-panes-colour brightred #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
