h for next-window

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # http://tmux.cvs.sourceforge.net/viewvc/tmux/tmux/FAQ
 
 # improve colors
+# https://wiki.archlinux.org/index.php/Tmux#24-bit_color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal 'screen-256color'
 
@@ -54,7 +55,6 @@ set -g status-keys vi
 # https://gist.github.com/anonymous/6bebae3eb9f7b972e6f0
 setw -g mode-keys vi
 # bind Space copy-mode # use [
-unbind p
 bind p paste-buffer
 
 # setup 'v' to begin selection as in Vim
@@ -68,13 +68,14 @@ bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 unbind l
 bind - last-window\; refresh-client -S
 
-# next-window is n by default
 # p is bound to paste
 bind u previous-window\; refresh-client -S
+unbind n
+bind h next-window\; refresh-client -S
 
 # Make the current window the Top window
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
-bind T swap-window -t 0
+bind T swap-window -t 1
 
 # Smart pane switching with awareness of vim splits
 # https://github.com/christoomey/vim-tmux-navigator
