--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-# http://tmux.cvs.sourceforge.net/viewvc/tmux/tmux/FAQ
+# https://robots.thoughtbot.com/love-hate-tmux
 
 # improve colors
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
@@ -86,15 +86,10 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
-bind -n M-g select-window -t 1
-bind -n M-h select-window -t 2
-bind -n M-c select-window -t 3
-bind -n M-t select-window -t 4
-bind -n M-r select-window -t 5
-bind -n M-n select-window -t 6
-bind -n M-m select-window -t 7
-bind -n M-w select-window -t 8
-bind -n M-v select-window -t 9
+# pane movement
+# http://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
+bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key @ command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # <prefix> Escape to clear the screen
 bind Escape send-keys 'C-l'
@@ -105,15 +100,18 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+bind M-h select-layout main-horizontal
+bind M-v select-layout main-vertical
+
 # visual notification of activity in other windows
 setw -g monitor-activity on
-#set -g visual-activity on
+# set -g visual-activity on
 
 # auto rename
 setw -g automatic-rename on
 
 # remove administrative debris (session name, hostname, time) in status bar
-#set -g status-left ''
+# set -g status-left ''
 # set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
 set -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
 
