--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,7 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # fzf-locate
 # -n means binding without prefix
-bind -n 'M-l' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
+bind -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
