huge tmux refactoring

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,90 +1,157 @@
-# https://robots.thoughtbot.com/love-hate-tmux
+# Disclaimer: following config is adapted for Dvorak layout
+# https://github.com/vbauerster/DeepDvorak
 
+# Cool arcticles about tmux:
+# https://robots.thoughtbot.com/love-hate-tmux
+# https://gist.github.com/MohamedAlaa/2961058
+
+# Hierarchy:
+#  Server
+#  ㄴSession
+#    ㄴWindow
+#      ㄴPane
+
+# Options:
+# - Session options (set-option [-g])
+# - Window options (set-window-option [-g])
+
+# -------------------------------------------------------------------
+# Session options
+# -------------------------------------------------------------------
 # improve colors
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal 'screen-256color'
+set-option -g default-terminal "screen-256color"
 
 # escape delay
-set -sg escape-time 1
+set-option -sg escape-time 1
 
 # Update the status bar every sixty seconds
 # devault value is 15
-set -g status-interval 60
+set-option -g status-interval 30
 
 # Unbind C-b (the default prefix)
-unbind C-b
-
+unbind-key C-b
 # C-b is not acceptable as a prefix, neither C-a, because both are used by Vim
 # Bind C-- as a prefix
 # http://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus
-set -g prefix C-_
-# use send-prefix to pass the prefix through
-bind Space send-prefix
+set-option -g prefix C-_
 
-# shortcut for reloading config
-bind r source-file ~/.tmux.conf \; display " ✱ ~/.tmux.conf is reloaded"
-
-# provide access to the clipboard for pbpaste, pbcopy
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# fzf-locate
-# -n means binding without prefix
-bind -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
+# Use vi keybindings for tmux commandline input.
+# Note that to get command mode you need to hit ESC twice...
+set-option -g status-keys vi
 
 # start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-setw -g pane-base-index 1
+set-option -g base-index 1
 
 # renumber windows sequentially after closing any of them
-set -g renumber-windows on
+set-option -g renumber-windows on
+
+# increase scrollback lines
+set-option -g history-limit 10000
+
+# Mouse
+set-option -g mouse on
+
+# remove administrative debris (session name, hostname, time) in status bar
+# set -g status-left ''
+# set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
+set-option -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
+
+# provide access to the clipboard for pbpaste, pbcopy
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# -------------------------------------------------------------------
+# Window options
+# -------------------------------------------------------------------
+# Copy-mode
+set-window-option -g mode-keys vi
+
+set-window-option -g pane-base-index 1
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
+set-window-option -g aggressive-resize on
 
-# increase scrollback lines
-set -g history-limit 10000
+# visual notification of activity in other windows
+set-window-option -g monitor-activity on
+# set -g visual-activity on
 
-# Use vi keybindings for tmux commandline input.
-# Note that to get command mode you need to hit ESC twice...
-set -g status-keys vi
+# auto rename
+set-window-option -g automatic-rename on
+
+# -------------------------------------------------------------------
+# Key bindings
+# -------------------------------------------------------------------
+# prefix c
+bind-key c new-window -c "#{pane_current_path}"
+
+# horizontal split
+bind-key % split-window -h -c "#{pane_current_path}"
+
+# vertical split
+bind-key '"' split-window -c "#{pane_current_path}"
+
+# Moving windows
+bind-key -r > swap-window -t :+
+bind-key -r < swap-window -t :-
+# http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
+bind-key T swap-window -t 1
+
+# use send-prefix to pass the prefix through
+bind-key Space send-prefix
+
+# shortcut for reloading config
+bind-key r source-file ~/.tmux.conf \; display " ✱ ~/.tmux.conf is reloaded"
+
+# fzf-locate
+# https://github.com/junegunn/fzf/wiki/Examples-(tmux)
+# -n means binding without prefix
+bind-key -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
+
+# Capture pane and open in Vim
+bind-key -n 'M-a' run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt'\;\
+             new-window "view /tmp/tmux-capture.txt"
 
 # y and p as in vim
 # https://gist.github.com/anonymous/6bebae3eb9f7b972e6f0
-setw -g mode-keys vi
 # bind Space copy-mode # use [
-bind p paste-buffer
+# bind p paste-buffer
 
 # setup 'v' to begin selection as in Vim
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind -t vi-copy Space halfpage-down
-bind -t vi-copy Bspace halfpage-up
-bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-pipe "pbcopy"
+bind-key -t vi-copy Space halfpage-down
+bind-key -t vi-copy Bspace halfpage-up
+# bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 
 # switch to last window
 unbind l
-bind - last-window\; refresh-client -S
+bind-key - last-window\; refresh-client -S
 
 # p is bound to paste
-bind u previous-window\; refresh-client -S
-unbind n
-bind h next-window\; refresh-client -S
-
-# Make the current window the Top window
-# http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
-bind T swap-window -t 1
+# bind u previous-window\; refresh-client -S
+# unbind n
+# bind h next-window\; refresh-client -S
 
 # Smart pane switching with awareness of vim splits
 # https://github.com/christoomey/vim-tmux-navigator
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "last-pane"
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "last-pane"
+
+# jump between panes
+bind-key tab select-pane -t :.+
+bind-key btab select-pane -t :.-
+
+# Synchronize panes
+# https://sanctum.geek.nz/arabesque/sync-tmux-panes/
+bind-key * set-window-option synchronize-pane
 
 # pane movement
 # http://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
@@ -92,28 +159,16 @@ bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key @ command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # <prefix> Escape to clear the screen
-bind Escape send-keys 'C-l'
+bind-key Escape send-keys 'C-l'
 
 # resize panes using PREFIX H, J, K, L
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
 
-bind M-h select-layout main-horizontal
-bind M-v select-layout main-vertical
-
-# visual notification of activity in other windows
-setw -g monitor-activity on
-# set -g visual-activity on
-
-# auto rename
-setw -g automatic-rename on
-
-# remove administrative debris (session name, hostname, time) in status bar
-# set -g status-left ''
-# set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
-set -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
+bind-key M-h select-layout main-horizontal
+bind-key M-v select-layout main-vertical
 
 # https://github.com/seebi/tmux-colors-solarized
 if-shell "[ -f ~/.tmuxcolors-256.conf ]" 'source ~/.tmuxcolors-256.conf'
