bind marked index keys to p/n window

--- a/tmux.conf
+++ b/tmux.conf
@@ -121,6 +121,11 @@ bind-key -t vi-copy Bspace halfpage-up
 unbind l
 bind-key - last-window\; refresh-client -S
 
+unbind p
+bind-key u previous-window\; refresh-client -S
+unbind n
+bind-key h next-window\; refresh-client -S
+
 # Smart pane switching with awareness of vim splits
 # https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
