--- a/tmux.conf
+++ b/tmux.conf
@@ -82,7 +82,7 @@ set-window-option -g automatic-rename on
 # Key bindings
 # -------------------------------------------------------------------
 # prefix c
-bind-key c new-window -c "#{pane_current_path}"
+# bind-key c new-window -c "#{pane_current_path}"
 
 # horizontal split
 bind-key % split-window -h -c "#{pane_current_path}"
@@ -122,9 +122,9 @@ unbind l
 bind-key - last-window\; refresh-client -S
 
 unbind p
-bind-key u previous-window\; refresh-client -S
+bind-key h previous-window\; refresh-client -S
 unbind n
-bind-key h next-window\; refresh-client -S
+bind-key u next-window\; refresh-client -S
 
 # Smart pane switching with awareness of vim splits
 # https://github.com/christoomey/vim-tmux-navigator
