prefixless binding: M-n tmux capture pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -108,8 +108,8 @@ bind-key r source-file ~/.tmux.conf \; display " ✱ ~/.tmux.conf is reloaded"
 bind-key -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # Capture pane and open in Vim
-bind-key -n 'M-a' run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt'\;\
-             new-window "view /tmp/tmux-capture.txt"
+bind-key -n 'M-n' run 'tmux capture-pane -S -10000 -p > /tmp/tmux-capture.txt'\;\
+             new-window "nvim /tmp/tmux-capture.txt"
 
 # setup 'v' to begin selection as in Vim
 bind-key -t vi-copy 'v' begin-selection
