--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,9 @@
 # improve colors
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
+# https://wiki.archlinux.org/index.php/Tmux#xterm-keys
+set-option -g xterm-keys on
 
 # escape delay
 set-option -sg escape-time 1
