--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,8 @@
 # improve colors
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+# <S-Home><S-End>
+set-option -ga terminal-overrides ',xterm-256color:kEND=\E[F:kHOM=\E[H'
 set-option -g default-terminal "xterm-256color"
 # https://wiki.archlinux.org/index.php/Tmux#xterm-keys
 set-option -g xterm-keys on
@@ -71,7 +73,7 @@ set-window-option -g pane-base-index 1
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
-set-window-option -g aggressive-resize on
+# set-window-option -g aggressive-resize on
 
 # visual notification of activity in other windows
 set-window-option -g monitor-activity on
