<> resize-pane accordingly

--- a/tmux.conf
+++ b/tmux.conf
@@ -157,10 +157,10 @@ bind-key @ command-prompt -p "send pane to:"  "join-pane -t '%%'"
 bind-key Escape send-keys 'C-l'
 
 # resize panes using PREFIX H, J, K, L
-bind-key -r H resize-pane -L 5
+bind-key -r < resize-pane -L 5
+bind-key -r > resize-pane -R 5
 bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
-bind-key -r L resize-pane -R 5
 
 bind-key M-h select-layout main-horizontal
 bind-key M-v select-layout main-vertical
