tmux: do not send 'C-l' when in vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -144,6 +144,8 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "last-pane"
 bind-key tab select-pane -t :.+
 bind-key btab select-pane -t :.-
 
+bind-key . last-pane
+
 # Synchronize panes
 # https://sanctum.geek.nz/arabesque/sync-tmux-panes/
 bind-key * set-window-option synchronize-pane
@@ -154,7 +156,7 @@ bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key @ command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # <prefix> Escape to clear the screen
-bind-key Escape send-keys 'C-l'
+bind-key Escape if-shell "$is_vim" "" "send-keys C-l"
 
 # resize panes using PREFIX H, J, K, L
 bind-key -r < resize-pane -L 5
