--- a/tmux.conf
+++ b/tmux.conf
@@ -137,7 +137,7 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind-key -n C-c if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "last-pane"
 
 # jump between panes
