--- a/tmux.conf
+++ b/tmux.conf
@@ -139,6 +139,7 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind-key -n C-c if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "last-pane"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-c" "send-keys C-c"
 
 # jump between panes
 bind-key tab select-pane -t :.+
