roxma/vim-tmux-clipboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,6 +62,9 @@ set-option -g mouse on
 # set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
 set-option -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
 
+# requires by 'roxma/vim-tmux-clipboard' 
+set-option -g focus-events on
+
 # -------------------------------------------------------------------
 # Window options
 # -------------------------------------------------------------------
