--- a/tmux.conf
+++ b/tmux.conf
@@ -123,12 +123,12 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 bind-key -t vi-copy Space halfpage-down
 bind-key -t vi-copy Bspace halfpage-up
+bind-key p paste-buffer
 
 # switch to last window
 unbind l
 bind-key - last-window\; refresh-client -S
 
-unbind p
 bind-key h previous-window\; refresh-client -S
 unbind n
 bind-key u next-window\; refresh-client -S
