--- a/tmux.conf
+++ b/tmux.conf
@@ -18,12 +18,13 @@
 # -------------------------------------------------------------------
 # Session options
 # -------------------------------------------------------------------
+# ~/dotfiles/resources/tmux-256color-italic.terminfo
+set-option -g default-terminal "tmux-256color-italic"
 # improve colors
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
 # <S-Home><S-End>
-set-option -ga terminal-overrides ',xterm-256color:kEND=\E[F:kHOM=\E[H'
-set-option -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ',xterm-256color-italic:kEND=\E[F:kHOM=\E[H'
 # https://wiki.archlinux.org/index.php/Tmux#xterm-keys
 set-option -g xterm-keys on
 
