--- a/tmux.conf
+++ b/tmux.conf
@@ -124,6 +124,8 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 bind-key -t vi-copy Space halfpage-down
 bind-key -t vi-copy Bspace halfpage-up
+# unbind default paste-buffer and set it to 'p'
+unbind ]
 bind-key p paste-buffer
 
 # switch to last window
