arrows do resize panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -108,7 +108,7 @@ bind-key T swap-window -t 1
 bind-key Space send-prefix
 
 # shortcut for reloading config
-bind-key r source-file ~/.tmux.conf \; display " ✱ ~/.tmux.conf is reloaded"
+bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
 
 # fzf-locate
 # https://github.com/junegunn/fzf/wiki/Examples-(tmux)
@@ -124,6 +124,9 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 bind-key -t vi-copy Space halfpage-down
 bind-key -t vi-copy Bspace halfpage-up
+# unbind default copy-mode and set it to esc
+unbind [
+bind Escape copy-mode
 # unbind default paste-buffer and set it to 'p'
 unbind ]
 bind-key p paste-buffer
@@ -151,7 +154,11 @@ bind-key -n C-l send-keys 'C-c'
 bind-key tab select-pane -t :.+
 bind-key btab select-pane -t :.-
 
+unbind \;
 bind-key . last-pane
+
+unbind :
+bind-key \; command-prompt
 
 # Synchronize panes
 # https://sanctum.geek.nz/arabesque/sync-tmux-panes/
@@ -162,14 +169,14 @@ bind-key * set-window-option synchronize-pane
 bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key @ command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
-# <prefix> Escape to clear the screen
-bind-key Escape if-shell "$is_vim" "" "send-keys C-l"
+# <prefix> ] to clear the screen
+bind-key ] if-shell "$is_vim" "" "send-keys C-l"
 
-# resize panes using PREFIX H, J, K, L
-bind-key -r < resize-pane -L 5
-bind-key -r > resize-pane -R 5
-bind-key -r J resize-pane -D 5
-bind-key -r K resize-pane -U 5
+# resize panes using PREFIX arrows
+bind-key -r Left resize-pane -L 4
+bind-key -r Right resize-pane -R 4
+bind-key -r Down resize-pane -D 4
+bind-key -r Up resize-pane -U 4
 
 bind-key M-h select-layout main-horizontal
 bind-key M-v select-layout main-vertical
