tmux: edit V line with nvim

--- a/tmux.conf
+++ b/tmux.conf
@@ -181,5 +181,7 @@ bind-key -r Up resize-pane -U 4
 bind-key M-h select-layout main-horizontal
 bind-key M-v select-layout main-vertical
 
+bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
+
 # https://github.com/seebi/tmux-colors-solarized
 if-shell "[ -f ~/.tmuxcolors-256.conf ]" 'source ~/.tmuxcolors-256.conf'
