strip out italic form $TERM

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,13 +18,13 @@
 # -------------------------------------------------------------------
 # Session options
 # -------------------------------------------------------------------
-# ~/dotfiles/resources/tmux-256color-italic.terminfo
-set-option -g default-terminal "tmux-256color-italic"
+# ~/dotfiles/resources/tmux-256color.terminfo
+set-option -g default-terminal "tmux-256color"
 # improve colors
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
-set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 # <S-Home><S-End>
-set-option -ga terminal-overrides ',xterm-256color-italic:kEND=\E[F:kHOM=\E[H'
+set-option -ga terminal-overrides ',xterm-256color:kEND=\E[F:kHOM=\E[H'
 # https://wiki.archlinux.org/index.php/Tmux#xterm-keys
 set-option -g xterm-keys on
 
