tmux: change prefix to C-Space

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,6 +28,9 @@ set-option -ga terminal-overrides ',xterm-256color:kEND=\E[F:kHOM=\E[H'
 # https://wiki.archlinux.org/index.php/Tmux#xterm-keys
 set-option -g xterm-keys on
 
+# provide access to the clipboard for pbpaste, pbcopy
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # escape delay
 set-option -sg escape-time 1
 
@@ -38,9 +41,8 @@ set-option -g status-interval 30
 # Unbind C-b (the default prefix)
 unbind-key C-b
 # C-b is not acceptable as a prefix, neither C-a, because both are used by Vim
-# Bind C-- as a prefix
-# http://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus
-set-option -g prefix C-_
+# http://superuser.com/a/178223/578741
+set-option -g prefix C-Space
 
 # Use vi keybindings for tmux commandline input.
 # Note that to get command mode you need to hit ESC twice...
@@ -104,8 +106,8 @@ bind-key -r < swap-window -t :-
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind-key T swap-window -t 1
 
-# use send-prefix to pass the prefix through
-bind-key Space send-prefix
+# send the prefix key
+bind-key Escape send-prefix
 
 # shortcut for reloading config
 bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
@@ -124,16 +126,16 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 bind-key -t vi-copy Space halfpage-down
 bind-key -t vi-copy Bspace halfpage-up
-# unbind default copy-mode and set it to esc
+# unbind default copy-mode and set it to hyphen
 unbind [
-bind Escape copy-mode
+bind-key - copy-mode
 # unbind default paste-buffer and set it to 'p'
 unbind ]
 bind-key p paste-buffer
 
 # switch to last window
 unbind l
-bind-key - last-window\; refresh-client -S
+bind-key Space last-window\; refresh-client -S
 
 bind-key h previous-window\; refresh-client -S
 unbind n
@@ -149,6 +151,9 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind-key -n C-c if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "last-pane"
 bind-key -n C-l send-keys 'C-c'
+
+# <C-Space><C-Space> (whithout depressing ctrl)
+bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-keys C-l"
 
 # jump between panes
 bind-key tab select-pane -t :.+
@@ -168,9 +173,6 @@ bind-key * set-window-option synchronize-pane
 # http://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
 bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key @ command-prompt -p "send pane to:"  "join-pane -t '%%'"
-
-# <prefix> ] to clear the screen
-bind-key ] if-shell "$is_vim" "" "send-keys C-l"
 
 # resize panes using PREFIX arrows
 bind-key -r Left resize-pane -L 4
