--- a/tmux.conf
+++ b/tmux.conf
@@ -86,7 +86,7 @@ set-window-option -g monitor-activity on
 # set -g visual-activity on
 
 # auto rename
-set-window-option -g automatic-rename on
+# set-window-option -g automatic-rename on
 
 # -------------------------------------------------------------------
 # Key bindings
