--- a/tmux.conf
+++ b/tmux.conf
@@ -106,9 +106,6 @@ bind-key -r < swap-window -t :-
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind-key T swap-window -t 1
 
-# send the prefix key
-bind-key Escape send-prefix
-
 # shortcut for reloading config
 bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
 
@@ -152,8 +149,11 @@ bind-key -n C-c if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "last-pane"
 bind-key -n C-l send-keys 'C-c'
 
+# send prefix key, if not in vim
 # <C-Space><C-Space> (whithout depressing ctrl)
-bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-keys C-l"
+bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
+
+bind-key Escape send-keys C-l
 
 # jump between panes
 bind-key tab select-pane -t :.+
