--- a/tmux.conf
+++ b/tmux.conf
@@ -186,4 +186,4 @@ bind-key M-v select-layout main-vertical
 bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
 # https://github.com/seebi/tmux-colors-solarized
-if-shell "[ -f ~/.tmuxcolors-256.conf ]" 'source ~/.tmuxcolors-256.conf'
+if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
