--- a/tmux.conf
+++ b/tmux.conf
@@ -159,8 +159,8 @@ bind-key Escape send-keys C-l
 bind-key tab select-pane -t :.+
 bind-key btab select-pane -t :.-
 
-unbind \;
-bind-key . last-pane
+# unbind \;
+# bind-key . last-pane
 
 unbind :
 bind-key \; command-prompt
