--- a/tmux.conf
+++ b/tmux.conf
@@ -79,7 +79,7 @@ set-window-option -g pane-base-index 1
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
-# set-window-option -g aggressive-resize on
+set-window-option -g aggressive-resize on
 
 # visual notification of activity in other windows
 set-window-option -g monitor-activity on
