tmux: jump btw panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -142,11 +142,11 @@ bind-key u next-window\; refresh-client -S
 # https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind-key -n C-c if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "last-pane"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-c if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind-key -n C-l send-keys 'C-c'
 
 # send prefix key, if not in vim
@@ -156,11 +156,8 @@ bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 bind-key Escape send-keys C-l
 
 # jump between panes
-bind-key tab select-pane -t :.+
-bind-key btab select-pane -t :.-
-
-# unbind \;
-# bind-key . last-pane
+# complement o with O
+bind-key O select-pane -t :.-
 
 unbind :
 bind-key \; command-prompt
